Updated 5. Download and upload a graph (markdown)

--- a/5.-Download-and-upload-a-graph.md
+++ b/5.-Download-and-upload-a-graph.md
@@ -1,5 +1,13 @@
-When you are satisfied with the graph you are building, you can download it to your machine.
+## Download a graph
+When you are satisfied with the graph you are building, you can download it to your machine. Just click the download icon in the menu bar:
 
+![Download current graph](https://github.com/marklogic-community/pipes/blob/master/wikiAssets/download.png?raw=true)
 
+You can then share the graph with some other users or just reload it back later.
 
-You can then share the graph with some other users or just reload it back later. To load a graph click the top left block icons, and drop the graph file in the dedicated area:
+## Reload a graph
+To load a graph click the top left block icons in the main UI and drop the graph file in the dedicated area in the "From File" tab:
+
+![Reload a saved graph](https://github.com/marklogic-community/pipes/blob/master/wikiAssets/upload.png?raw=true)
+
+You are now ready to update and run the graph again.
