Updated 2. Transforming data with Pipes (markdown)

--- a/2.-Transforming-data-with-Pipes.md
+++ b/2.-Transforming-data-with-Pipes.md
@@ -1,2 +1,18 @@
 [[/images/TranformingDataWithPipes.gif|Video showing a real Pipes project]]
 
+In this video, you'll learn how to use Pipes to:
+* Create source blocks from the documents in the Staging (or any other!) Database
+* Create blocks from the Entities as defined in your DHF project
+* Transform the data from the source to target entity
+* Live-preview your work
+* Map / normalize values
+* Create unique IDs
+* Automatically convert dates to ISO format
+* Create multiple entities on the output
+* Add collections to the output documents
+* Create URIs for output documents
+* Add triples
+* Save your work to the database (to continue work on it later)
+* Export the custom code step to your DHF project and push the code directly to the database so it can be executed from DHF
+
+
