Updated 4. Creating custom user blocks for developers (markdown)

--- a/4.-Creating-custom-user-blocks-for-developers.md
+++ b/4.-Creating-custom-user-blocks-for-developers.md
@@ -62,3 +62,7 @@ LiteGraph.registerNodeType("user/MyFunction", myBlock ); //The first parameter m
 
 You must then run gradle mlloadmodules
 You can also find details on block implementation here: [Litegraph guides](https://github.com/jagenjo/litegraph.js/tree/master/guides)
+
+
+## Reload library
+The libraries (core and user) are loaded at startup. If you added a block, just refresh the browser to get updated definitions of the blocks.
