Updated 3. Block library overview (markdown)

--- a/3.-What-is-a-Block-in-pipes-and-library-overview.md
+++ b/3.-What-is-a-Block-in-pipes-and-library-overview.md
@@ -1,6 +1,26 @@
 This section introduces the blocks available in the Pipes default library.
+# What is a block in Pipes ?
+A block is a visual representation of a transformation applied to the data.
+A block as inputs, outputs but also simple configuration options (via Widgets) and sometimes advanced options (by double clicking the block).
 
-You miss a block ?? Don't hesitate to suggest new blocks by creating a new issues.
+A block can have multiple types:
+## Source Blocks
+A _Source block_ is used to create a block based on a selection of fields that usually come from a data source (but not only). The created block will then expose these fields as inputs and/or outputs of the block. It means you can set the fields values (via the inputs) or get the fields values (from the outputs).
+Main usage is to feed the block with a node (The main document of the DHF Customer Step for ex.) and get the individual field values you are interested in as outputs. We'll detail later all the options.
+
+## Entity Blocks
+An _Entity Block_ represents a business entity of the MarkLogic DHF. It's used to set the values of the entity properties. The block exposes the properties as inputs and it outputs the DHF entity as a node.
+
+## Function Blocks
+A _Function Block_ takes input(s) applies logic to it and returns one or multiples outputs. By default, we created a standard library of functions (Right click the canvas to see library) that can be used to transform the data. If you miss one you have 2 options:
+* Add a request here in _Issues_ to ask the community for this block
+* Create your own block, with your own logic (see Create User block)
+
+
+
+
+# You miss a block ?? 
+Don't hesitate to suggest new blocks by creating a new issues.
 
 _Blocks with * in the name are not available yet._
 
