Updated 3. What is a Block in pipes and library overview (markdown)

--- a/3.-What-is-a-Block-in-pipes-and-library-overview.md
+++ b/3.-What-is-a-Block-in-pipes-and-library-overview.md
@@ -14,7 +14,7 @@ An _Entity Block_ represents a business entity of the MarkLogic DHF. It's used t
 ## Function Blocks
 A _Function Block_ takes input(s) applies logic to it and returns one or multiples outputs. By default, we created a standard library of functions (Right click the canvas to see library) that can be used to transform the data. If you miss one you have 2 options:
 * Add a request here in _Issues_ to ask the community for this block
-* Create your own block, with your own logic (see Create User block)
+* Create your own block, with your own logic (see [Creating custom user block for developers](https://github.com/marklogic-community/pipes/wiki/4.-Creating-custom-user-blocks-for-developers))
 
 
 
