--- a/4.-Creating-custom-user-blocks-for-developers.md
+++ b/4.-Creating-custom-user-blocks-for-developers.md
@@ -1,9 +1,12 @@
 # User defined blocks
 In order to define your own blocks without having to modify and build the front-end you can just update the following 2 files:
 
+./Examples/CustomModules/user.json
+./Examples/CustomModules/user.sjs
+
 ## Block interfaces definition: It's used to display the block and its inputs/outputs
 
-**/dist_user/DesignerUI/statics/user.json**
+**./Examples/CustomModules/user.json**
 
 Add a new block definition in the array like this:
 
@@ -37,7 +40,7 @@ It's used to execute the logic of the block in MarkLogic
 
 The code is located in :
 
-**/dist_user/DHF/src/main/ml-modules/root/custom-modules/pipes/user.sjs**
+**./Examples/CustomModules/user.sjs**
 
 ```
 function myBlock() //Any unique function is the module
@@ -63,6 +66,8 @@ LiteGraph.registerNodeType("user/MyFunction", myBlock ); //The first parameter m
 You must then run gradle mlloadmodules
 You can also find details on block implementation here: [Litegraph guides](https://github.com/jagenjo/litegraph.js/tree/master/guides)
 
+## How to tell Pipes to use these blocks
+Put these files in a directory and in application.properties, define a property:
+`customModulesRoot=/my/custom/modules/path`
 
-## Reload library
-The libraries (core and user) are loaded at startup. If you added a block, just refresh the browser to get updated definitions of the blocks.
+Now, run the Jar with --deployBackend=true and the custom modules will be used by Pipes.
