Updated 3. What is a Block in pipes and library overview (markdown)

--- a/3.-What-is-a-Block-in-pipes-and-library-overview.md
+++ b/3.-What-is-a-Block-in-pipes-and-library-overview.md
@@ -1,26 +1,27 @@
 This section introduces the blocks available in the Pipes default library.
-# What is a block in Pipes ?
-A block is a visual representation of a transformation applied to the data.
-A block as inputs, outputs but also simple configuration options (via Widgets) and sometimes advanced options (by double clicking the block).
+# What is a block?
+In Pipes, a block is a visual representation of a transformation which is applied to data.
+A block has inputs and outputs, simple configuration options (via Widgets), and can also include advanced options which are accessed by double clicking on the block.
 
-A block can have multiple types:
+There are three different types of blocks:
 ## Source Blocks
-A _Source block_ is used to create a block based on a selection of fields that usually come from a data source (but not only). The created block will then expose these fields as inputs and/or outputs of the block. It means you can set the fields values (via the inputs) or get the fields values (from the outputs).
-Main usage is to feed the block with a node (The main document of the DHF Customer Step for ex.) and get the individual field values you are interested in as outputs. We'll detail later all the options.
+A _Source block_ is a block you create by choosing fields from a data source, such as the documents in a particular collection. Source Blocks can then use these fields as either their inputs or outputs. The values of a field can be set by feeding data to it via an inputs, or you can use their values by connecting the outputs the other blocks.
+The most common way to use a Source Block is to feed it a node (such as the incoming document from the DHF Customer Step) and the values the fields defined in the block will be automatically filtered and sent out as the outputs. We'll look at all the options for Source Blocks in more detail later.
 
 ## Entity Blocks
-An _Entity Block_ represents a business entity of the MarkLogic DHF. It's used to set the values of the entity properties. The block exposes the properties as inputs and it outputs the DHF entity as a node.
+An _Entity Block_ represents a business entity which has been created in your MarkLogic DHF project. You can create a new Entity by feeding properties of the entity in as inputs and the output side of the block will automatically output an Entity was a node. 
+More information about Entity Services can be [found here](https://developer.marklogic.com/learn/entity-services/)
 
 ## Function Blocks
-A _Function Block_ takes input(s) applies logic to it and returns one or multiples outputs. By default, we created a standard library of functions (Right click the canvas to see library) that can be used to transform the data. If you miss one you have 2 options:
-* Add a request here in _Issues_ to ask the community for this block
-* Create your own block, with your own logic (see [Creating custom user block for developers](https://github.com/marklogic-community/pipes/wiki/4.-Creating-custom-user-blocks-for-developers))
+A _Function Block_ takes one or more inputs and applies some logic before returning the result through the outputs. Pipes contains a standard library of function blocks that can be used to transform data - right click on the canvas to see the library. If you need a new Function Block you have two options:
+* Add a request here in [Issues](https://github.com/marklogic-community/pipes/issues) to ask the community for this block
+* Create a custom block with your own logic (see [Creating custom user block for developers](https://github.com/marklogic-community/pipes/wiki/4.-Creating-custom-user-blocks-for-developers))
 
 
 
 
-# You miss a block ?? 
-Don't hesitate to suggest new blocks by creating a new issues.
+# Missing a block?
+Don't hesitate to suggest new blocks by creating a ticket on this project.
 
 _Blocks with * in the name are not available yet._
 
@@ -42,7 +43,7 @@ This block merges the inputs into an array. If one of the input is itself an arr
 
 
 # controls / CheckPhoneNumber 
-This check the provided phone number according to the country. It returns the reformatted phone number and the validation status
+Checks the provided phone number according to the country. It returns the re-formatted phone number and the validation status
 * **Inputs**
   * phoneNumber  
   * countryISO2  
@@ -256,7 +257,7 @@ This block applies DHF 5.1 mapping to the input node
 
 
 # feature / selectCase 
-This block returns one of the inputX value depending on the value2Test input. The selection of inputX is done based on the block configuration (double click)
+This block returns one of the inputX value depending on the value2Test input. Selection of inputX is done based on the block configuration (double click)
 * **Inputs**
   * value2Test  
   * input0  
