Updated 3. What is a Block in pipes and library overview (markdown)

--- a/3.-What-is-a-Block-in-pipes-and-library-overview.md
+++ b/3.-What-is-a-Block-in-pipes-and-library-overview.md
@@ -1,11 +1,11 @@
 This section introduces the blocks available in the Pipes default library.
 # What is a block?
 In Pipes, a block is a visual representation of a transformation which is applied to data.
-A block has inputs and outputs, simple configuration options (via Widgets), and can also include advanced options which are accessed by double clicking on the block.
+A block has inputs and outputs, simple configuration options (via Widgets), and some also include advanced options which are accessed by double clicking on the block.
 
 There are three different types of blocks:
 ## Source Blocks
-A _Source block_ is a block you create by choosing fields from a data source, such as the documents in a particular collection. Source Blocks can then use these fields as either their inputs or outputs. The values of a field can be set by feeding data to it via an inputs, or you can use their values by connecting the outputs the other blocks.
+A _Source block_ is a block you create by choosing fields from a data source, such as the documents in a particular collection. Source Blocks can then use these fields as either their inputs or outputs. The value of a field can be set by feeding data to it via its input, or you can use their existing values by connecting the outputs to the other blocks.
 The most common way to use a Source Block is to feed it a node (such as the incoming document from the DHF Customer Step) and the values the fields defined in the block will be automatically filtered and sent out as the outputs. We'll look at all the options for Source Blocks in more detail later.
 
 ## Entity Blocks
