--- a/1.-Creating-your-first-Pipes-project.md
+++ b/1.-Creating-your-first-Pipes-project.md
@@ -1,6 +1,6 @@
 The following video shows how to create a minimal Pipes project.
 
-![Animated GIF showing how to create a minimal Pipes project](https://github.com/marklogic-community/pipes/blob/master/wikiAssets/PipesMinimalGraph.gif)
+<a href="https://github.com/marklogic-community/pipes/blob/master/wikiAssets/PipesMinimalGraph.gif" target="_blank">![Animated GIF showing how to create a minimal Pipes project](https://github.com/marklogic-community/pipes/blob/master/wikiAssets/PipesMinimalGraph.gif)</a>
 
 Steps:
 1. Click on "X" to close the info box
