Updated 1. Creating your first Pipes project (markdown)

--- a/1.-Creating-your-first-Pipes-project.md
+++ b/1.-Creating-your-first-Pipes-project.md
@@ -1,5 +1,7 @@
 The following video shows how to create a minimal Pipes project.
 
+![Animated GIF showing how to create a minimal Pipes project](https://github.com/marklogic-community/pipes/blob/master/wikiAssets/PipesMinimalGraph.gif)
+
 <a href="./wikiAssets/PipesMinimalGraph.gif" target="_blank">![Animated GIF showing how to create a minimal Pipes project](https://github.com/marklogic-community/pipes/blob/master/wikiAssets/PipesMinimalGraph.gif)</a>
 
 Steps:
