Updated 1. Creating your first Pipes project (markdown)

--- a/1.-Creating-your-first-Pipes-project.md
+++ b/1.-Creating-your-first-Pipes-project.md
@@ -1,6 +1,4 @@
-The following video shows how to create a minimal Pipes project.
-
-![Animated GIF showing how to create a minimal Pipes project](https://github.com/marklogic-community/pipes/blob/master/wikiAssets/PipesMinimalGraph.gif)
+The following video shows how to create a minimal Pipes project (click on it for larger size):
 
 <a href="https://raw.githubusercontent.com/marklogic-community/pipes/master/wikiAssets/PipesMinimalGraph.gif" target="_blank">![Animated GIF showing how to create a minimal Pipes project](https://github.com/marklogic-community/pipes/blob/master/wikiAssets/PipesMinimalGraph.gif)</a>
 
