Updated 2. Transforming data with Pipes (markdown)

--- a/2.-Transforming-data-with-Pipes.md
+++ b/2.-Transforming-data-with-Pipes.md
@@ -1,4 +1,4 @@
-[[/images/TranformingDataWithPipes.gif|Video showing a real Pipes project]]
+<a href="./images/TranformingDataWithPipes.gif" target="_blank">[[/images/TranformingDataWithPipes.gif|Video showing a real Pipes project]]</a>
 
 In this video, you'll learn how to use Pipes to:
 * Create source blocks from the documents in the Staging (or any other!) Database
