Updated 5. Download and reload a copy of the graph (markdown)

--- a/5.-Download-and-reload-a-copy-of-the-graph.md
+++ b/5.-Download-and-reload-a-copy-of-the-graph.md
@@ -5,7 +5,7 @@ When you are satisfied with the graph you are building, you can download it to y
 
 You can then share the graph with some other users or just reload it back later.
 
-## Reload a graph
+## Upload a graph
 To load a graph click the top left block icons in the main UI and drop the graph file in the dedicated area in the "From File" tab:
 
 ![Reload a saved graph](https://github.com/marklogic-community/pipes/blob/master/wikiAssets/upload.png?raw=true)
