Updated 2. Transforming data with Pipes (markdown)

--- a/2.-Transforming-data-with-Pipes.md
+++ b/2.-Transforming-data-with-Pipes.md
@@ -1,5 +1,7 @@
 <a href="./images/TranformingDataWithPipes.gif" target="_blank">[[/images/TranformingDataWithPipes.gif|Video showing a real Pipes project]]</a>
 
+[Watch this video on YouTube](https://www.youtube.com/watch?v=ZdHoP9SCbNE).
+
 In this video, you'll learn how to use Pipes to:
 * Create source blocks from the documents in the Staging (or any other!) Database
 * Create blocks from the Entities as defined in your DHF project
