Updated 6. For code contributors: run Pipes from sources (markdown)

--- a/6.-For-code-contributors:-run-Pipes-from-sources.md
+++ b/6.-For-code-contributors:-run-Pipes-from-sources.md
@@ -1,27 +1,39 @@
 # Prepare the environment
 
 Prerequisites:
-Gradle >= 4.6
-npm
+* [Gradle >= 4.6](https://gradle.org/install/)
+* [npm](https://docs.npmjs.com/downloading-and-installing-node-js-and-npm)
+* [quasar cli](https://quasar.dev/quasar-cli/installation)
+* [java](https://jdk.java.net/13/)
 
+# Environment setup
+Run the following commands:
+```
+git clone https://github.com/marklogic-community/pipes.git
+cd pipes
+npm install
+npm install -g @quasar/cli
+```
 
+# Running from source
+This process is meant for local development, i.e. changes are immediately reflected.
 
-Do the following:
+In one terminal/command prompt, run:
+```
+cd java-middle-tier
+gradle runLocal
+```
 
-- Clone the repo
-- Run `npm install`
-- Do following:
-
-`cd java-middle tier`
-
-run `gradle wrapper`
-
-`cp node_modules_override/litegraph.js node_modules/litegraph.js/build/litegraph.js`
-
-# Run the UI locally
-
-`gradle dev`
+Then in a separate terminal/command prompt, run:
+```
+cd java-middle-tier
+gradle runQuasarDev
+```
 
 # Build the jar
+```
+cd pipes/java-middle-tier
+gradle bootJar
+```
 
-Run `buildPackageUiJar.sh` script which will build the Pipes Jar. It can be found in ./java-middle-tier/build/libs
+Resulting jar would be found at `java-middle-tier/build/libs/`
